compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__custom_types__deprecated_all_varients_type.snap
---
source: compiler-core/src/type_/tests/custom_types.rs
expression: "\npub type Numbers {\n  @deprecated(\"1\")\n  One\n  @deprecated(\"2\")\n  Two\n}\n"
---
----- SOURCE CODE

pub type Numbers {
  @deprecated("1")
  One
  @deprecated("2")
  Two
}


----- ERROR
error: All variants of custom type deprecated.
  ┌─ /src/one/two.gleam:2:1
  │
2 │ pub type Numbers {
  │ ^^^^^^^^^^^^^^^^

Consider deprecating the type as a whole.

  @deprecated("message")
  type Wibble {
    Wobble1
    Wobble2
  }
